--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,33 @@
     box-sizing: border-box;
 }
 
+:root{
+    font-size: 16px;
+}
+
 body{
     background-color: black;
 }
 
 #canvas1{
-    position: absolute;
-    border: 1px solid white;
+    position: relative;
     width: 800px;
     height: 700px;
+}
+
+#container{
+    position: absolute;
+    width: 800px;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    font-size: 2rem;
+}
+
+#slider{
+    width: 100%;
+}
+
+p{
+    color: white;
 }
